// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorPage Should post error to Slack if environment is production 1`] = `
Array [
  Object {
    "message": "Some error message",
  },
  Object {
    "backendStatus": Object {},
    "cellInfo": Object {
      "focus": Object {
        "key": "louvain",
        "store": "cellSets",
      },
      "groupedTrack": "louvain",
      "selectedTracks": Array [
        "louvain",
      ],
    },
    "cellMeta": Object {
      "doubletScores": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
      "mitochondrialContent": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
      "numOfGenes": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
      "numOfUmis": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
    },
    "cellSets": Object {
      "error": false,
      "hidden": Set {},
      "hierarchy": Array [],
      "initialLoadPending": true,
      "loading": false,
      "properties": Object {},
      "selected": Array [],
      "updatingClustering": false,
    },
    "componentConfig": Object {},
    "differentialExpression": Object {
      "comparison": Object {
        "advancedFilters": Array [],
        "group": Object {
          "between": Object {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
          "within": Object {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
        },
        "ordering": Object {
          "orderBy": "logFC",
          "orderDirection": "DESC",
        },
        "type": "within",
      },
      "properties": Object {
        "comparisonGroup": Object {},
        "comparisonType": null,
        "data": Array [],
        "error": false,
        "loading": false,
        "total": 0,
      },
    },
    "embeddings": Object {},
    "experimentSettings": Object {
      "info": Object {
        "experimentId": null,
        "experimentName": null,
        "pipelineVersion": null,
        "sampleIds": Array [],
      },
      "originalProcessing": Object {},
      "processing": Object {
        "meta": Object {
          "changedQCFilters": Set {},
          "completingStepError": false,
          "loading": false,
          "loadingSettingsError": false,
        },
      },
    },
    "experiments": Object {
      "ids": Array [],
      "meta": Object {
        "activeExperimentId": null,
        "error": false,
        "loading": false,
        "saving": false,
      },
    },
    "genes": Object {
      "expression": Object {
        "downsampledCellOrder": Array [],
        "downsampledMatrix": ExpressionMatrix {
          "geneIndexes": Object {},
          "rawGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "setGeneExpression": [Function],
          "stats": Object {
            "rawMean": Array [],
            "rawStdev": Array [],
            "truncatedMax": Array [],
            "truncatedMin": Array [],
          },
          "truncatedGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "zScore": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
        },
        "error": false,
        "loading": Array [],
        "matrix": ExpressionMatrix {
          "geneIndexes": Object {},
          "rawGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "setGeneExpression": [Function],
          "stats": Object {
            "rawMean": Array [],
            "rawStdev": Array [],
            "truncatedMax": Array [],
            "truncatedMin": Array [],
          },
          "truncatedGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "zScore": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
        },
        "views": Object {},
      },
      "focused": undefined,
      "markers": Object {
        "ETag": null,
        "error": false,
        "loading": false,
      },
      "properties": Object {
        "data": Object {},
        "loading": Array [],
        "views": Object {},
      },
      "selected": Array [],
    },
    "layout": Object {
      "panel": "Gene list",
      "windows": Object {
        "direction": "row",
        "first": Object {
          "direction": "column",
          "first": Object {
            "direction": "row",
            "first": "UMAP",
            "second": "Cell sets and Metadata",
            "splitPercentage": 60,
          },
          "second": "Heatmap",
          "splitPercentage": 50,
        },
        "second": "Genes",
        "splitPercentage": 70,
      },
    },
    "networkResources": Object {
      "domainName": "scp.biomage.net",
      "environment": "production",
    },
    "samples": Object {
      "meta": Object {
        "error": false,
        "loading": false,
        "saving": false,
        "validating": Array [],
      },
    },
    "user": Object {
      "current": null,
    },
  },
]
`;

exports[`ErrorPage Should post error to Slack if environment is staging 1`] = `
Array [
  Object {
    "message": "Some error message",
  },
  Object {
    "backendStatus": Object {},
    "cellInfo": Object {
      "focus": Object {
        "key": "louvain",
        "store": "cellSets",
      },
      "groupedTrack": "louvain",
      "selectedTracks": Array [
        "louvain",
      ],
    },
    "cellMeta": Object {
      "doubletScores": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
      "mitochondrialContent": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
      "numOfGenes": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
      "numOfUmis": Object {
        "data": Array [],
        "error": false,
        "loading": true,
      },
    },
    "cellSets": Object {
      "error": false,
      "hidden": Set {},
      "hierarchy": Array [],
      "initialLoadPending": true,
      "loading": false,
      "properties": Object {},
      "selected": Array [],
      "updatingClustering": false,
    },
    "componentConfig": Object {},
    "differentialExpression": Object {
      "comparison": Object {
        "advancedFilters": Array [],
        "group": Object {
          "between": Object {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
          "within": Object {
            "basis": null,
            "cellSet": null,
            "compareWith": null,
          },
        },
        "ordering": Object {
          "orderBy": "logFC",
          "orderDirection": "DESC",
        },
        "type": "within",
      },
      "properties": Object {
        "comparisonGroup": Object {},
        "comparisonType": null,
        "data": Array [],
        "error": false,
        "loading": false,
        "total": 0,
      },
    },
    "embeddings": Object {},
    "experimentSettings": Object {
      "info": Object {
        "experimentId": null,
        "experimentName": null,
        "pipelineVersion": null,
        "sampleIds": Array [],
      },
      "originalProcessing": Object {},
      "processing": Object {
        "meta": Object {
          "changedQCFilters": Set {},
          "completingStepError": false,
          "loading": false,
          "loadingSettingsError": false,
        },
      },
    },
    "experiments": Object {
      "ids": Array [],
      "meta": Object {
        "activeExperimentId": null,
        "error": false,
        "loading": false,
        "saving": false,
      },
    },
    "genes": Object {
      "expression": Object {
        "downsampledCellOrder": Array [],
        "downsampledMatrix": ExpressionMatrix {
          "geneIndexes": Object {},
          "rawGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "setGeneExpression": [Function],
          "stats": Object {
            "rawMean": Array [],
            "rawStdev": Array [],
            "truncatedMax": Array [],
            "truncatedMin": Array [],
          },
          "truncatedGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "zScore": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
        },
        "error": false,
        "loading": Array [],
        "matrix": ExpressionMatrix {
          "geneIndexes": Object {},
          "rawGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "setGeneExpression": [Function],
          "stats": Object {
            "rawMean": Array [],
            "rawStdev": Array [],
            "truncatedMax": Array [],
            "truncatedMin": Array [],
          },
          "truncatedGeneExpressions": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
          "zScore": Object {
            "datatype": undefined,
            "index": Array [],
            "mathjs": "SparseMatrix",
            "ptr": Array [
              0,
            ],
            "size": Array [
              0,
              0,
            ],
            "values": Array [],
          },
        },
        "views": Object {},
      },
      "focused": undefined,
      "markers": Object {
        "ETag": null,
        "error": false,
        "loading": false,
      },
      "properties": Object {
        "data": Object {},
        "loading": Array [],
        "views": Object {},
      },
      "selected": Array [],
    },
    "layout": Object {
      "panel": "Gene list",
      "windows": Object {
        "direction": "row",
        "first": Object {
          "direction": "column",
          "first": Object {
            "direction": "row",
            "first": "UMAP",
            "second": "Cell sets and Metadata",
            "splitPercentage": 60,
          },
          "second": "Heatmap",
          "splitPercentage": 50,
        },
        "second": "Genes",
        "splitPercentage": 70,
      },
    },
    "networkResources": Object {
      "domainName": "scp.biomage.net",
      "environment": "staging",
    },
    "samples": Object {
      "meta": Object {
        "error": false,
        "loading": false,
        "saving": false,
        "validating": Array [],
      },
    },
    "user": Object {
      "current": null,
    },
  },
]
`;
